Bug 137324 - space compression when composing message does not work
Summary: space compression when composing message does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.9.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-14 10:25 UTC by Martin L ü c h e m
Modified: 2008-03-02 21:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin L ü c h e m 2006-11-14 10:25:51 UTC
Version:           1.9.5 (using KDE 3.5.5, Debian Package 4:3.5.5a.dfsg.1-3 (4.0))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.18-2-686

Hi,

as I use KMail in German I do not know the exact menue entries!

I compose an new document or work on an existing. Then I try to repare the line breaks (carriage return). I do the following:

1. I mark the lines I want to repare

2. Bearbeiten -> Zwischenräume komprimieren
   (Edit -> compress spaces)

Result: Nothing! It does not work at all! It will work, when I do not mark any line but in this case all spaces will be eliminated what for sure is nonsense.

I am sure, this had worked before!

Regards Martin
Comment 1 Philip Rodrigues 2006-11-15 00:10:20 UTC
Works fine here (SVN r599759). You say you want to clean line breaks, but the feature just cleans spaces...
Comment 2 Martin L ü c h e m 2006-11-16 17:27:21 UTC
Hi Phil, 
 
 Am Mittwoch, 15. November 2006 00:10 schrieb Philip Rodrigues:
[bugs.kde.org quoted mail]

When I mark a text block It does not clean anything! When I do not mark 
anything it will clean everything. See my other message.

In my opinion the option should be: Clean spaces in text blocks. I really 
liked this feature and I am sure it worked before I last upgraded KMail. 
(Complete new Installation)

Regards, MArtin
Comment 3 Martin L ü c h e m 2006-11-16 17:29:03 UTC
Hi Philip, 
 
 Am Mittwoch, 15. November 2006 00:10 schrieb Philip Rodrigues:
[bugs.kde.org quoted mail]
Please compare this answer to the other I just sent.
This is, what it does, when I do not mark a text block. It seems to eliminate 
spaces at every end of line in the whole message.
Regards Martin
Comment 4 Thomas McGuire 2008-03-02 21:40:46 UTC
SVN commit 781424 by tmcguire:

Fix the "clean spaces" function in KMail and also fix changing identities - now the signature is proberly changed,
even if it is a HTML signature.

Changes to KMeditor:
- Add new functions: cleanWhitespace() and replaceSignature(...) + helper functions for those
- Remove some unused virtual functions
- Remove a unused variable
- Small style fixes
- Rename parent to q, as this is the standard
- Small fixes for insertSignature

Changes to KMail:
- Use the new functions of KMeditor and remove own implementations

Changes to KNode
- Follow KMeditor change

Still TODO:
- Move the HTML mode mess completely into KMeditor instead of having
  3 different implementations in KMeditor, KMComposeWin and KMCompoerEditor
- Fix the highlighter

BUG: 137324


 M  +3 -3      kmail/kmcomposereditor.cpp  
 M  +25 -90    kmail/kmcomposewin.cpp  
 M  +0 -1      kmail/kmcomposewin.h  
 M  +2 -2      knode/kncomposer.cpp  
 M  +204 -40   libkdepim/kmeditor.cpp  
 M  +29 -5     libkdepim/kmeditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=781424