Fix the "clean spaces" function in KMail and also fix changing identities - now the signature is proberly changed, even if it is a HTML signature.

Changes to KMeditor:
- Add new functions: cleanWhitespace() and replaceSignature(...) + helper functions for those
- Remove some unused virtual functions
- Remove a unused variable
- Small style fixes
- Rename parent to q, as this is the standard
- Small fixes for insertSignature

Changes to KMail:
- Use the new functions of KMeditor and remove own implementations

Changes to KNode
- Follow KMeditor change

Still TODO:
- Move the HTML mode mess completely into KMeditor instead of having
  3 different implementations in KMeditor, KMComposeWin and KMCompoerEditor
- Fix the highlighter

BUG: 137324

svn path=/trunk/KDE/kdepim/knode/; revision=781424